--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,20 @@
 {
-    "extends": ["next/core-web-vitals", "prettier"],
-    "plugins": ["unused-imports", "prettier"],
-    "rules": {
-        "import/order": [
-            "error",
-            {
-                "groups": [
-                    "index",
-                    "sibling",
-                    "parent",
-                    "internal",
-                    "external",
-                    "builtin",
-                    "object",
-                    "type"
-                ],
-                "newlines-between": "always",
-                "alphabetize": {
-                    "order": "asc",
-                    "caseInsensitive": true
-                }
-            }
-        ],
-        "prettier/prettier": "error",
-        "no-unused-vars": "error",
-        "unused-imports/no-unused-imports": "error"
-    }
+  "extends": ["next/core-web-vitals", "prettier"],
+  "plugins": ["unused-imports", "prettier"],
+  "rules": {
+    "import/order": [
+      "error",
+      {
+        "groups": ["builtin", "external", "internal"],
+        "newlines-between": "always",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
+      }
+    ],
+    "prettier/prettier": "error",
+    "no-unused-vars": "error",
+    "unused-imports/no-unused-imports": "error"
+  }
 }
